[package]
name = "bbdo-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = "0.0.5"
serde_json = "1"
phf = { version = "0.10", features = ["macros"] }
clap = "2.34.0"
colored = "2.0.0"
miniz_oxide = "*"
quick-protobuf = "0.8.0"
